pinned cuda-toolkit

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -50,11 +50,13 @@ runs:
         if [ "${{ inputs.rocm }}" = "ON" ]; then
           :
         # regular CUDA for GPU builds
-        elif [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.cuvs }}" = "OFF" ]; then
+        elif [ "${{ inputs.gpu }}" = "ON" ]
           conda install -y -q cuda-toolkit -c "nvidia/label/cuda-12.4.0"
         # and CUDA from cuVS channel for cuVS builds
-        elif [ "${{ inputs.cuvs }}" = "ON" ]; then
-          conda install -y -q libcuvs=24.10 cuda-version=12.4 cuda-toolkit=12.4 -c rapidsai -c conda-forge -c nvidia
+        fi
+        if [ "${{ inputs.cuvs }}" = "ON" ]; then
+          conda install -y -q cuda-version=12.4 -c nvidia
+          conda install -y -q libcuvs=24.10 -c rapidsai
         fi
 
         # install test packages
