--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -50,7 +50,7 @@ runs:
         if [ "${{ inputs.rocm }}" = "ON" ]; then
           :
         # regular CUDA for GPU builds
-        elif [ "${{ inputs.gpu }}" = "ON" ]
+        elif [ "${{ inputs.gpu }}" = "ON" ]; then
           conda install -y -q cuda-toolkit -c "nvidia/label/cuda-12.4.0"
         fi
         
