--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,12 +1,6 @@
 name: Build Release
 on:
-  workflow_dispatch:
-  pull_request:
-    branches:
-      - main
-  push:
-    tags:
-      - 'v*'
+  workflow_call:
 env:
   OMP_NUM_THREADS: '10'
   MKL_THREADING_LAYER: GNU
