--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
       - 'v*'
 jobs:
   build-pull-request:
-    uses: ./build-pull-request.yml
+    uses: ./build-pull-request.yml@
   build-release:
-    uses: ./build-release.yml
+    uses: ./build-release.yml@
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
