--- a/conda/faiss-gpu-cuvs/meta.yaml
+++ b/conda/faiss-gpu-cuvs/meta.yaml
@@ -43,12 +43,13 @@ outputs:
         - {{ pin_compatible('libfaiss', exact=True) }}
       script_env:
         - CUDA_ARCHS
+        - CUDA_HOME=$CONDA_PREFIX
     requirements:
       build:
         - {{ compiler('cxx') }}
         {% if cudatoolkit == '11.8.0' %}
         - cudatoolkit-dev
-        - {{ compiler('nvcc') }}
+        - {{ compiler('nvcc') }} =11.8.0
         {% else %}
         - cuda-toolkit {{ cudatoolkit }}
         - {{ compiler('cuda-nvcc') }}
@@ -98,12 +99,13 @@ outputs:
     script: build-pkg.bat  # [win]
     build:
       string: "py{{ PY_VER }}_h{{ PKG_HASH }}_{{ number }}_cuda{{ cudatoolkit }}{{ suffix }}"
+      script_env:
+        - CUDA_HOME=$CONDA_PREFIX
     requirements:
       build:
         - {{ compiler('cxx') }}
         {% if cudatoolkit == '11.8.0' %}
-        - cudatoolkit-dev
-        - {{ compiler('nvcc') }}
+        - {{ compiler('nvcc') }} =11.8.0
         {% else %}
         - cuda-toolkit {{ cudatoolkit }}
         - {{ compiler('cuda-nvcc') }}
