--- a/conda/faiss-gpu-cuvs/meta.yaml
+++ b/conda/faiss-gpu-cuvs/meta.yaml
@@ -43,7 +43,7 @@ outputs:
         - {{ pin_compatible('libfaiss', exact=True) }}
       script_env:
         - CUDA_ARCHS
-        - CUDA_HOME=$CONDA_PREFIX
+        - CUDA_HOME ={{ CONDA_PREFIX }}
     requirements:
       build:
         - {{ compiler('cxx') }}
@@ -99,7 +99,7 @@ outputs:
     build:
       string: "py{{ PY_VER }}_h{{ PKG_HASH }}_{{ number }}_cuda{{ cudatoolkit }}{{ suffix }}"
       script_env:
-        - CUDA_HOME=$CONDA_PREFIX
+        - CUDA_HOME ={{ CONDA_PREFIX }}
     requirements:
       build:
         - {{ compiler('cxx') }}
