--- a/conda/faiss-gpu-cuvs/meta.yaml
+++ b/conda/faiss-gpu-cuvs/meta.yaml
@@ -46,11 +46,6 @@ outputs:
     requirements:
       build:
         - {{ compiler('cxx') }}
-        {% if cudatoolkit == '11.8.0' %}
-        - {{ compiler('nvcc') }} =11.8.0
-        {% else %}
-        - {{ compiler('cuda-nvcc') }}
-        {% endif %}
         - sysroot_linux-64  # [linux64]
         - llvm-openmp  # [osx]
         - cmake >=3.26.4
@@ -60,6 +55,7 @@ outputs:
         - mkl-devel =2023  # [x86_64]
         - cuda-version {{ cudatoolkit }}
         - cuda-toolkit {{ cudatoolkit }}
+        - cuda-profiler-api =11.8.86
       host:
         - _openmp_mutex =4.5=2_kmp_llvm  # [x86_64]
         - mkl =2023  # [x86_64]
@@ -73,11 +69,7 @@ outputs:
         - _openmp_mutex =4.5=2_kmp_llvm  # [x86_64]
         - mkl =2023  # [x86_64]
         - openblas  # [not x86_64]
-        {% if cudatoolkit == '11.8.0' %}
-        - cudatoolkit
-        {% else %}
         - cuda-cudart
-        {% endif %}
         - libcublas {{ libcublas_constraints }}
         - libcuvs =24.08
         - cuda-version {{ cuda_constraints }}
@@ -100,11 +92,6 @@ outputs:
     requirements:
       build:
         - {{ compiler('cxx') }}
-        {% if cudatoolkit == '11.8.0' %}
-        - {{ compiler('nvcc') }} =11.8.0
-        {% else %}
-        - {{ compiler('cuda-nvcc') }}
-        {% endif %}
         - sysroot_linux-64 =2.17 # [linux64]
         - swig
         - cmake >=3.24.0
