--- a/conda/faiss-gpu-cuvs/meta.yaml
+++ b/conda/faiss-gpu-cuvs/meta.yaml
@@ -59,12 +59,15 @@ outputs:
         - mkl =2023  # [x86_64]
         - openblas  # [not x86_64]
         - libcuvs =24.08
+        - cuda-version {{ cudatoolkit }}
       run:
         - _openmp_mutex =4.5=2_kmp_llvm  # [x86_64]
         - mkl =2023  # [x86_64]
         - openblas  # [not x86_64]
+        - cuda-cudart {{ cuda_constraints }}
         - libcublas {{ libcublas_constraints }}
         - libcuvs =24.08
+        - cuda-version {{ cudatoolkit }}
     test:
       requires:
         - conda-build
