--- a/conda/faiss-gpu-cuvs/meta.yaml
+++ b/conda/faiss-gpu-cuvs/meta.yaml
@@ -7,10 +7,10 @@
 {% set suffix = "_nightly" if environ.get('PACKAGE_TYPE') == 'nightly' else "" %}
 {% set number = GIT_DESCRIBE_NUMBER %}
 {% if cudatoolkit == '11.8.0' %}
-{% set cuda_constraints=">=11.8,<12" %}
-{% set libcublas_constraints=">=11.11,<12" %}
+{% set cuda_constraints=">=11.4,<=11.8" %}
+{% set libcublas_constraints=">=11.6,<12" %}
 {% elif cudatoolkit == '12.4.0' %}
-{% set cuda_constraints=">=12.1,<13" %}
+{% set cuda_constraints=">=12.1,<=12.5" %}
 {% set libcublas_constraints=">=12.1,<13" %}
 {% endif %}
 
@@ -59,7 +59,7 @@ outputs:
         - mkl =2023  # [x86_64]
         - openblas =0.3 # [not x86_64]
         - libcuvs =24.08
-        - cuda-version {{ cudatoolkit }}
+        - cuda-version {{ cuda_constraints }}
       run:
         - _openmp_mutex =4.5=2_kmp_llvm  # [x86_64]
         - mkl =2023  # [x86_64]
@@ -67,7 +67,7 @@ outputs:
         - cuda-cudart {{ cuda_constraints }}
         - libcublas {{ libcublas_constraints }}
         - libcuvs =24.08
-        - cuda-version {{ cudatoolkit }}
+        - cuda-version {{ cuda_constraints }}
     test:
       requires:
         - conda-build
