--- a/.github/actions/build_conda/action.yml
+++ b/.github/actions/build_conda/action.yml
@@ -36,6 +36,7 @@ runs:
       run: |
         conda install -y "conda!=24.11.0"
         conda install -y "conda-build!=24.11.0"
+        conda remove conda-anaconda-telemetry
     - name: Enable anaconda uploads
       if: inputs.label != ''
       shell: ${{ steps.choose_shell.outputs.shell }}
