--- a/.github/actions/build_conda/action.yml
+++ b/.github/actions/build_conda/action.yml
@@ -37,6 +37,7 @@ runs:
         conda install -y "conda!=24.11.0"
         conda install -y "conda-build!=24.11.0"
     - name: Fix CI failure
+      shell: ${{ steps.choose_shell.outputs.shell }}
       if: runner.os != 'Windows'
       run: conda remove conda-anaconda-telemetry
     - name: Enable anaconda uploads
