--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,7 +1,9 @@
 name: Nightly
 on:
-  schedule:
-    - cron:  '10 6 * * *'
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 env:
   OMP_NUM_THREADS: '10'
   MKL_THREADING_LAYER: GNU
@@ -20,129 +22,129 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
           label: nightly
-  linux-x86_64-GPU-CUDA-11-4-4-nightly:
-    name: Linux x86_64 GPU nightlies (CUDA 11.4.4)
-    runs-on: 4-core-ubuntu-gpu-t4
-    env:
-      CUDA_ARCHS: "60-real;61-real;62-real;70-real;72-real;75-real;80;86-real"
-      FAISS_FLATTEN_CONDA_INCLUDES: "1"
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: ./.github/actions/build_conda
-        env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        with:
-          label: nightly
-          cuda: "11.4.4"
-  linux-x86_64-GPU-CUVS-CUDA11-8-0-nightly:
-    name: Linux x86_64 GPU w/ cuVS nightlies (CUDA 11.8.0)
-    runs-on: 4-core-ubuntu-gpu-t4
-    env:
-      CUDA_ARCHS: "70-real;72-real;75-real;80;86-real"
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: ./.github/actions/build_conda
-        env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        with:
-          label: nightly
-          cuvs: "ON"
-          cuda: "11.8.0"
-  linux-x86_64-GPU-CUDA-12-1-1-nightly:
-    name: Linux x86_64 GPU nightlies (CUDA 12.1.1)
-    runs-on: 4-core-ubuntu-gpu-t4
-    env:
-      CUDA_ARCHS: "70-real;72-real;75-real;80;86-real"
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: ./.github/actions/build_conda
-        env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        with:
-          label: nightly
-          cuda: "12.1.1"
-  linux-x86_64-GPU-CUVS-CUDA12-4-0-nightly:
-    name: Linux x86_64 GPU w/ cuVS nightlies (CUDA 12.4.0)
-    runs-on: 4-core-ubuntu-gpu-t4
-    env:
-      CUDA_ARCHS: "70-real;72-real;75-real;80;86-real"
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: ./.github/actions/build_conda
-        env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        with:
-          label: nightly
-          cuvs: "ON"
-          cuda: "12.4.0"
-  windows-x86_64-nightly:
-    name: Windows x86_64 nightlies
-    runs-on: windows-2019
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: ./.github/actions/build_conda
-        env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        with:
-          label: nightly
-  osx-arm64-nightly:
-    name: OSX arm64 nightlies
-    runs-on: macos-14
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: ./.github/actions/build_conda
-        env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        with:
-          label: nightly
-  linux-arm64-nightly:
-    name: Linux arm64 nightlies
-    runs-on: 2-core-ubuntu-arm
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: ./.github/actions/build_conda
-        env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-        with:
-          label: nightly
-  auto-retry:
-    name: Auto retry on failure
-    if: fromJSON(github.run_attempt) < 2
-    runs-on: ubuntu-latest
-    steps:
-      - name: Start rerun workflow
-        env:
-          GH_REPO: ${{ github.repository }}
-          GH_TOKEN: ${{ github.token }}
-          GH_DEBUG: api
-        run: |
-          gh workflow run retry_build.yml \
-            -F run_id=${{ github.run_id }}
+  # linux-x86_64-GPU-CUDA-11-4-4-nightly:
+  #   name: Linux x86_64 GPU nightlies (CUDA 11.4.4)
+  #   runs-on: 4-core-ubuntu-gpu-t4
+  #   env:
+  #     CUDA_ARCHS: "60-real;61-real;62-real;70-real;72-real;75-real;80;86-real"
+  #     FAISS_FLATTEN_CONDA_INCLUDES: "1"
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
+  #     - uses: ./.github/actions/build_conda
+  #       env:
+  #         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #       with:
+  #         label: nightly
+  #         cuda: "11.4.4"
+  # linux-x86_64-GPU-CUVS-CUDA11-8-0-nightly:
+  #   name: Linux x86_64 GPU w/ cuVS nightlies (CUDA 11.8.0)
+  #   runs-on: 4-core-ubuntu-gpu-t4
+  #   env:
+  #     CUDA_ARCHS: "70-real;72-real;75-real;80;86-real"
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
+  #     - uses: ./.github/actions/build_conda
+  #       env:
+  #         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #       with:
+  #         label: nightly
+  #         cuvs: "ON"
+  #         cuda: "11.8.0"
+  # linux-x86_64-GPU-CUDA-12-1-1-nightly:
+  #   name: Linux x86_64 GPU nightlies (CUDA 12.1.1)
+  #   runs-on: 4-core-ubuntu-gpu-t4
+  #   env:
+  #     CUDA_ARCHS: "70-real;72-real;75-real;80;86-real"
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
+  #     - uses: ./.github/actions/build_conda
+  #       env:
+  #         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #       with:
+  #         label: nightly
+  #         cuda: "12.1.1"
+  # linux-x86_64-GPU-CUVS-CUDA12-4-0-nightly:
+  #   name: Linux x86_64 GPU w/ cuVS nightlies (CUDA 12.4.0)
+  #   runs-on: 4-core-ubuntu-gpu-t4
+  #   env:
+  #     CUDA_ARCHS: "70-real;72-real;75-real;80;86-real"
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
+  #     - uses: ./.github/actions/build_conda
+  #       env:
+  #         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #       with:
+  #         label: nightly
+  #         cuvs: "ON"
+  #         cuda: "12.4.0"
+  # windows-x86_64-nightly:
+  #   name: Windows x86_64 nightlies
+  #   runs-on: windows-2019
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
+  #     - uses: ./.github/actions/build_conda
+  #       env:
+  #         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #       with:
+  #         label: nightly
+  # osx-arm64-nightly:
+  #   name: OSX arm64 nightlies
+  #   runs-on: macos-14
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
+  #     - uses: ./.github/actions/build_conda
+  #       env:
+  #         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #       with:
+  #         label: nightly
+  # linux-arm64-nightly:
+  #   name: Linux arm64 nightlies
+  #   runs-on: 2-core-ubuntu-arm
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         fetch-tags: true
+  #     - uses: ./.github/actions/build_conda
+  #       env:
+  #         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #       with:
+  #         label: nightly
+  # auto-retry:
+  #   name: Auto retry on failure
+  #   if: fromJSON(github.run_attempt) < 2
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Start rerun workflow
+  #       env:
+  #         GH_REPO: ${{ github.repository }}
+  #         GH_TOKEN: ${{ github.token }}
+  #         GH_DEBUG: api
+  #       run: |
+  #         gh workflow run retry_build.yml \
+  #           -F run_id=${{ github.run_id }}
