--- a/.github/actions/build_conda/action.yml
+++ b/.github/actions/build_conda/action.yml
@@ -31,6 +31,7 @@ runs:
       with:
         python-version: '3.11'
         miniconda-version:  latest
+        reports: {'quiet': false}
     - name: Install conda build tools
       shell: ${{ steps.choose_shell.outputs.shell }}
       run: |
