run proper test

--- a/conda/faiss-gpu/meta.yaml
+++ b/conda/faiss-gpu/meta.yaml
@@ -107,7 +107,8 @@ outputs:
         - pytorch-cuda {{ cuda_constraints }}
       commands:
         - cp tests/common_faiss_tests.py faiss/gpu/test
-        - python -X faulthandler -m unittest discover -v -s faiss/gpu/test/ -p "*test_with_gpu*"
+        - python -X faulthandler -m unittest discover -v -s faiss/gpu/test/ -p "test_gpu_basics*"
+        - python -X faulthandler -m unittest discover -v -s faiss/gpu/test/ -p "test_*"
         - sh test_cpu_dispatch.sh  # [linux64]
       files:
         - test_cpu_dispatch.sh  # [linux64]
