--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -185,7 +185,7 @@ jobs:
     name: Linux x86_64 GPU nightlies (CUDA 11.4.4)
     runs-on: 4-core-ubuntu-gpu-t4
     env:
-      CUDA_ARCHS: "60-real;61-real;62-real;70-real;72-real;75-real;80;86-real"
+      CUDA_ARCHS: "75"  # otherwise way too slow 
       FAISS_FLATTEN_CONDA_INCLUDES: "1"
     steps:
       - name: Checkout
