--- a/c_api/gpu/CMakeLists.txt
+++ b/c_api/gpu/CMakeLists.txt
@@ -3,7 +3,15 @@
 # This source code is licensed under the MIT license found in the
 # LICENSE file in the root directory of this source tree.
 
-target_sources(faiss_c PRIVATE
+if(FAISS_BUILD_GPU_SHARED_LIBS)
+  add_library(faiss_gpu_c)
+  target_link_libraries(faiss_gpu_c PRIVATE faiss_gpu)
+  set(FAISS_GPU_C faiss_gpu_c)
+else()
+  set(FAISS_GPU_C faiss_c)
+endif()
+
+target_sources(FAISS_GPU_C PRIVATE
   DeviceUtils_c.cpp
   GpuAutoTune_c.cpp
   GpuClonerOptions_c.cpp
@@ -16,11 +24,11 @@ file(GLOB FAISS_C_API_GPU_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
 faiss_install_headers("${FAISS_C_API_GPU_HEADERS}" c_api/gpu)
 
 if (FAISS_ENABLE_ROCM)
-  target_link_libraries(faiss_c PUBLIC hip::host roc::hipblas)
+  target_link_libraries(FAISS_GPU_C PUBLIC hip::host roc::hipblas)
 else()
   find_package(CUDAToolkit REQUIRED)
-  target_link_libraries(faiss_c PUBLIC CUDA::cudart CUDA::cublas $<$<BOOL:${FAISS_ENABLE_CUVS}>:cuvs::cuvs>)
+  target_link_libraries(FAISS_GPU_C PUBLIC CUDA::cudart CUDA::cublas $<$<BOOL:${FAISS_ENABLE_CUVS}>:cuvs::cuvs>)
 endif()
 
 add_executable(example_gpu_c EXCLUDE_FROM_ALL example_gpu_c.c)
-target_link_libraries(example_gpu_c PRIVATE faiss_c)
+target_link_libraries(example_gpu_c PRIVATE FAISS_GPU_C)
