--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -84,21 +84,11 @@ runs:
         # Get UBUNTU version name
         UBUNTU_VERSION_NAME=`cat /etc/os-release | grep UBUNTU_CODENAME | awk -F= '{print $2}'`
 
-        # Set ROCm version
-        ROCM_VERSION="6.2"
-
-        # Download, prepare, and install the package signing key
-        mkdir --parents --mode=0755 /etc/apt/keyrings
-        wget https://repo.radeon.com/rocm/rocm.gpg.key -O - | gpg --dearmor | sudo tee /etc/apt/keyrings/rocm.gpg > /dev/null
-
-        # Add rocm repository
-        wget -qO - http://repo.radeon.com/rocm/rocm.gpg.key | sudo apt-key add -
-        rocm_baseurl="http://repo.radeon.com/rocm/apt/${ROCM_VERSION}"
-        echo "deb [arch=amd64] ${rocm_baseurl} ${UBUNTU_VERSION_NAME} main" | sudo tee /etc/apt/sources.list.d/rocm.list
+        # Download, prepare, and install the package for ROCm 6.4
+        wget https://repo.radeon.com/amdgpu-install/6.4/ubuntu/jammy/amdgpu-install_6.4.60400-1_all.deb
+        sudo apt-get install -y ./amdgpu-install_6.4.60400-1_all.deb
         sudo apt-get -qq update --allow-insecure-repositories >/dev/null
-        sudo apt-get -qq install -y --allow-unauthenticated \
-            "rocm-dev${ROCM_VERSION}" "rocm-utils${ROCM_VERSION}" \
-            "rocm-libs${ROCM_VERSION}" >/dev/null
+        sudo apt-get -qq install -y --allow-unauthenticated rocm >/dev/null
 
         # Fake presence of MI200-class accelerators
         echo "gfx90a" | sudo tee /opt/rocm/bin/target.lst
@@ -106,7 +96,7 @@ runs:
         # Cleanup
         sudo apt-get -qq autoclean >/dev/null
         sudo apt-get -qq clean >/dev/null
-        sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+        sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* ./amdgpu-install_6.4.60400-1_all.deb
     - name: Symblink system dependencies
       if: inputs.rocm == 'ON'
       shell: bash
@@ -154,7 +144,8 @@ runs:
       if: inputs.rocm == 'ON'
       shell: bash
       run: |
-        pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.1
+        # Added --no-cache-dir because of an install issue with 6.3
+        pip3 install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.3
     - name: Python tests (CPU only)
       if: inputs.gpu == 'OFF'
       shell: bash
