--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -81,13 +81,11 @@ runs:
         sudo apt-get -qq update >/dev/null
         sudo apt-get -qq install -y kmod wget gpg >/dev/null
 
-        # Get UBUNTU version name
-        UBUNTU_VERSION_NAME=`cat /etc/os-release | grep UBUNTU_CODENAME | awk -F= '{print $2}'`
-
         # Download, prepare, and install the package for ROCm 6.4
         wget https://repo.radeon.com/amdgpu-install/6.4/ubuntu/jammy/amdgpu-install_6.4.60400-1_all.deb
         sudo apt-get install -y ./amdgpu-install_6.4.60400-1_all.deb
         sudo apt-get -qq update --allow-insecure-repositories >/dev/null
+        sudo apt-get -qq -y install python3-setuptools python3-wheel >/dev/null
         sudo apt-get -qq install -y --allow-unauthenticated rocm >/dev/null
 
         # Fake presence of MI200-class accelerators
