--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -248,6 +248,7 @@ if(FAISS_ENABLE_CUVS)
           impl/CuvsFlatIndex.cuh
           impl/CuvsIVFFlat.cuh
           impl/CuvsIVFPQ.cuh
+          utils/CuvsFilterConvert.h
           utils/CuvsUtils.h)
   list(APPEND FAISS_GPU_SRC
           GpuIndexCagra.cu
@@ -255,6 +256,7 @@ if(FAISS_ENABLE_CUVS)
           impl/CuvsFlatIndex.cu
           impl/CuvsIVFFlat.cu
           impl/CuvsIVFPQ.cu
+          utils/CuvsFilterConvert.cu
           utils/CuvsUtils.cu)
 endif()
 
@@ -295,6 +297,7 @@ if(FAISS_ENABLE_CUVS)
     impl/CuvsFlatIndex.cu
     impl/CuvsIVFFlat.cu
     impl/CuvsIVFPQ.cu
+    utils/CuvsFilterConvert.cu
     utils/CuvsUtils.cu
     TARGET_DIRECTORY faiss
     PROPERTIES COMPILE_OPTIONS "-fvisibility=hidden")
