build: enable wasm target

--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -377,6 +377,9 @@ if(FAISS_USE_LTO)
   endif()
 endif()
 
+if (DEFINED EMSCRIPTEN)
+  list(PREPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/web_deps/dummy_openmp/cmake)
+endif()
 find_package(OpenMP REQUIRED)
 target_link_libraries(faiss PRIVATE OpenMP::OpenMP_CXX)
 target_link_libraries(faiss_avx2 PRIVATE OpenMP::OpenMP_CXX)
@@ -393,14 +396,22 @@ if(MKL_FOUND)
   target_link_libraries(faiss_avx512 PRIVATE ${MKL_LIBRARIES})
   target_link_libraries(faiss_avx512_spr PRIVATE ${MKL_LIBRARIES})
 else()
-  find_package(BLAS REQUIRED)
+  if(DEFINED EMSCRIPTEN)
+    set(BLAS_LIBRARIES ${PROJECT_SOURCE_DIR}/web_deps/libblas.a)
+  else()
+    find_package(BLAS REQUIRED)
+  endif()
   target_link_libraries(faiss PRIVATE ${BLAS_LIBRARIES})
   target_link_libraries(faiss_avx2 PRIVATE ${BLAS_LIBRARIES})
   target_link_libraries(faiss_avx512 PRIVATE ${BLAS_LIBRARIES})
   target_link_libraries(faiss_avx512_spr PRIVATE ${BLAS_LIBRARIES})
   target_link_libraries(faiss_sve PRIVATE ${BLAS_LIBRARIES})
 
-  find_package(LAPACK REQUIRED)
+  if(DEFINED EMSCRIPTEN)
+    set(LAPACK_LIBRARIES ${PROJECT_SOURCE_DIR}/web_deps/liblapack.a)
+  else()
+    find_package(LAPACK REQUIRED)
+  endif()  
   target_link_libraries(faiss PRIVATE ${LAPACK_LIBRARIES})
   target_link_libraries(faiss_avx2 PRIVATE ${LAPACK_LIBRARIES})
   target_link_libraries(faiss_avx512 PRIVATE ${LAPACK_LIBRARIES})
